[update]-無待辦事項頁面切版

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
             <a href="#" class="logout">登出</a>
         </nav>
     </header>
-    <section>
+    <section class="main">
         <div class="todo">
             <input type="text" class="todo-text" placeholder="新增待辦事項">
-            <input type="button" class="todo-plus" value="">
+            <input type="image" src="./img/plus 1.svg "class="todo-submit" value="submit">
         </div>
-        <div class="todo-noting">
+        <div class="todo-nothing">
             <p>目前尚無待辦事項</p>
-            <img src="./img/empty.png" alt="目前尚無待辦事項"  width="100px">
+            <img src="./img/empty.png" alt="目前尚無待辦事項">
         </div>
     </section>
     <script src="./all.js"></script>
