--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
             <input type="text" class="todo-text" placeholder="新增待辦事項">
             <input type="image" src="./img/plus 1.svg "class="todo-submit" value="submit">
         </div>
+        <div class="todo-something">
+            <ul class="center todo-status">
+                <li class="all">全部</li>
+                <li class="undone">待完成</li>
+                <li class="done">已完成</li>
+            </ul>
+            <ul class="todo-something-list">
+                <li class="todo-items">
+                    <input type="checkbox" class="items-done">
+                    <span class="items-text">記得喝水</span>
+                    <img src="./img/Vector.svg">
+                </li>
+                <li class="todo-items"></li>
+            </ul>
+            <div class="todo-something-status">
+                <span class="todo-num">1個待完成項目</span>
+                <a class="todo-clear" href="#" >清除已完成項目</a>
+            </div>
+        </div>
         <div class="todo-nothing">
             <p>目前尚無待辦事項</p>
             <img src="./img/empty.png" alt="目前尚無待辦事項">
