--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
             </ul>
             <ul class="action-buttons">
                 <li><input type="button" value="登入" class="login-btn"></li>
-                <li><a href="#">註冊帳號</a></li>
+                <li><a href="./register.html">註冊帳號</a></li>
             </ul>
         </div>
     </section>
