update-修正註冊頁面標籤名稱

--- a/register.html
+++ b/register.html
@@ -23,7 +23,7 @@
                 </li>
                 <li class="form-field">
                     <p>您的暱稱</p>
-                    <input type="text" name="text" id="text" placeholder="請輸入您的暱稱">
+                    <input type="text" name="text" id="nick-name" placeholder="請輸入您的暱稱">
                 </li>
                 <li class="form-field">
                     <p>密碼</p>
